RESOLVED FIXED211731
REGRESSION: ASSERTION FAILED: referrer == URL(URL(), referrer).strippedForUseAsReferrer()
https://bugs.webkit.org/show_bug.cgi?id=211731
Summary REGRESSION: ASSERTION FAILED: referrer == URL(URL(), referrer).strippedForUse...
Ryan Haddad
Reported 2020-05-11 10:31:35 PDT
TestWebKitAPI.WebKit.HTTPReferer ASSERTION FAILED: referrer == URL(URL(), referrer).strippedForUseAsReferrer() ./page/SecurityPolicy.cpp(93) : static WTF::String WebCore::SecurityPolicy::generateReferrerHeader(WebCore::ReferrerPolicy, const WTF::URL &, const WTF::String &) 1 0x6fac872f9 WTFCrash 2 0x6dd5ff17b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x6e0f5956b WebCore::SecurityPolicy::generateReferrerHeader(WebCore::ReferrerPolicy, WTF::URL const&, WTF::String const&) 4 0x6e0bfbabc WebCore::FrameLoader::loadFrameRequest(WebCore::FrameLoadRequest&&, WebCore::Event*, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WTF::Optional<WebCore::AdClickAttribution>&&) 5 0x6e0c4c264 WebCore::ScheduledFormSubmission::fire(WebCore::Frame&) 6 0x6e0c41e99 WebCore::NavigationScheduler::timerFired() 7 0x6e0c575b7 decltype(*(std::__1::forward<WebCore::NavigationScheduler*&>(fp0)).*fp()) std::__1::__invoke<void (WebCore::NavigationScheduler::*&)(), WebCore::NavigationScheduler*&, void>(void (WebCore::NavigationScheduler::*&)(), WebCore::NavigationScheduler*&) 8 0x6e0c57530 std::__1::__bind_return<void (WebCore::NavigationScheduler::*)(), std::__1::tuple<WebCore::NavigationScheduler*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::NavigationScheduler::*)(), std::__1::tuple<WebCore::NavigationScheduler*>, std::__1::tuple<> >::value>::type std::__1::__apply_functor<void (WebCore::NavigationScheduler::*)(), std::__1::tuple<WebCore::NavigationScheduler*>, 0ul, std::__1::tuple<> >(void (WebCore::NavigationScheduler::*&)(), std::__1::tuple<WebCore::NavigationScheduler*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&) 9 0x6e0c574e9 std::__1::__bind_return<void (WebCore::NavigationScheduler::*)(), std::__1::tuple<WebCore::NavigationScheduler*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::NavigationScheduler::*)(), std::__1::tuple<WebCore::NavigationScheduler*>, std::__1::tuple<> >::value>::type std::__1::__bind<void (WebCore::NavigationScheduler::*&)(), WebCore::NavigationScheduler*>::operator()<>() 10 0x6e0c5748e WTF::Detail::CallableWrapper<std::__1::__bind<void (WebCore::NavigationScheduler::*&)(), WebCore::NavigationScheduler*>, void>::call() 11 0x6dd6118f2 WTF::Function<void ()>::operator()() const 12 0x6dd64518e WebCore::Timer::fired() 13 0x6e10cc994 WebCore::ThreadTimers::sharedTimerFiredInternal() 14 0x6e10d4a51 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 15 0x6e10d49fe WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 16 0x6dd6118f2 WTF::Function<void ()>::operator()() const 17 0x6e10948eb WebCore::MainThreadSharedTimer::fired() 18 0x6e1142d86 WebCore::timerFired(__CFRunLoopTimer*, void*) 19 0x7fff36ad09b9 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 20 0x7fff36ad051f __CFRunLoopDoTimer 21 0x7fff36ad0007 __CFRunLoopDoTimers 22 0x7fff36ab4daa __CFRunLoopRun 23 0x7fff36ab3ffe CFRunLoopRunSpecific 24 0x7fff391482a8 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 25 0x7fff391fad2f -[NSRunLoop(NSRunLoop) run] 26 0x7fff70c4b51a _xpc_objc_main.cold.4 27 0x7fff70c4b460 _xpc_objc_main 28 0x7fff70c4af93 _xpc_copy_xpcservice_dictionary 29 0x6d0869007 WebKit::XPCServiceMain(int, char const**) 30 0x6d1ca559b WKXPCServiceMain 31 0x1043fde92 main https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.HTTPReferer
Attachments
Patch (2.35 KB, patch)
2020-05-11 11:58 PDT, Alex Christensen
no flags
Radar WebKit Bug Importer
Comment 1 2020-05-11 10:31:52 PDT
Ryan Haddad
Comment 2 2020-05-11 10:33:07 PDT
This test was added 3 days ago with https://trac.webkit.org/changeset/261402/webkit
Alex Christensen
Comment 3 2020-05-11 11:58:11 PDT
Alex Christensen
Comment 4 2020-05-11 11:58:28 PDT
*** Bug 211737 has been marked as a duplicate of this bug. ***
Alex Christensen
Comment 5 2020-05-11 11:59:34 PDT
Note You need to log in before you can comment on or make changes to this bug.