Fix assertion after r261414 https://bugs.webkit.org/show_bug.cgi?id=211731

This fixes a debug assertion that fired 100% of the time when running the test introduced in r261414
I also respond to Darin's and Youenn's post-commit feedback.

* page/SecurityPolicy.cpp:
(WebCore::SecurityPolicy::generateReferrerHeader):
* platform/network/ResourceRequestBase.cpp:
(WebCore::ResourceRequestBase::setHTTPReferrer):



Canonical link: https://commits.webkit.org/224631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261485 268f45cc-cd09-0410-ab3c-d52691b4dbfc