Source/WebCore/page/SecurityPolicy.cpp
@@ -90,7 +90,8 @@ String SecurityPolicy::referrerToOriginString(const String& referrer)
 
 String SecurityPolicy::generateReferrerHeader(ReferrerPolicy referrerPolicy, const URL& url, const String& referrer)
 {
-    ASSERT(referrer == URL(URL(), referrer).strippedForUseAsReferrer());
+    ASSERT(referrer == URL(URL(), referrer).strippedForUseAsReferrer()
+        || referrer == SecurityOrigin::create(URL(URL(), referrer))->toString());
 
     if (referrer.isEmpty())
         return String();
